<resources>
    <string name="app_name">Airline-Android</string>
    <string name="launchCalculator">This is a very long string for a button name</string>
    <string name="welcomeText">Welcome to Mina\'s Airline Android App!</string>
    <string name="helpText">Help</string>
    <string name="airlineText">Airlines</string>
    <string name="newFlightText">New Flight</string>
    <string name="createNewFlightText">Create a New Flight</string>
    <string name="enterAirlineNameText">Enter airline name</string>
    <string name="enterFlightNumberText">Enter flight number</string>
    <string name="enterSourceCodeText">Enter source code</string>
    <string name="enterDepartTimeText">Enter depart time (hh:mm)</string>
    <string name="enterArriveDate">Enter arrive date (mm/dd/yyyy)</string>
    <string name="enterDestCode">Enter destination code</string>
    <string name="enterDepartDate">Enter depart date (mm/dd/yyyy)</string>
    <string name="enterArriveTime">Enter arrive time (hh:mm)</string>
    <string name="createFlightText">Create New Flight</string>
    <string name="all_airlines">All Airlines</string>
    <string name="click_on_an_airline_to_see_its_flights">Click on an airline to see its flights.</string>
    <string name="airline">Airline</string>
    <string name="spinner_to_select_an_airline">Spinner to select an airline</string>
    <string name="source">Source</string>
    <string name="spinner_to_select_a_source">Spinner to select a source</string>
    <string name="destination">Destination</string>
    <string name="spinner_to_select_a_destination">Spinner to select a destination</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="add_flight">Add Flight</string>
</resources>