<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="63dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/flightsList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/airlineSpinnerLabel"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/airline"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/airlineSpinner"
                android:layout_width="255dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/spinner_to_select_an_airline" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sourceSpinnerLabel"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/source"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sourceSpinner"
                android:layout_width="255dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/spinner_to_select_a_source" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/destSpinnerLabel"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/destination"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/destSpinner"
                android:layout_width="255dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/spinner_to_select_a_destination" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingHorizontal="5dp">

            <Button
                android:id="@+id/clearNowButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"
                android:onClick="clearBtnHandler"
                android:text="@string/clear"
                android:textColor="#311B92" />

            <Button
                android:id="@+id/searchNowButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="255dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:onClick="searchBtnHandler"
                android:text="@string/search"
                android:textColor="#263238" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/flightsList"
        android:layout_width="412dp"
        android:layout_height="404dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>